--- a/index.html
+++ b/index.html
@@ -47,18 +47,10 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <!-- WMB: TEMP ADDING THIS TO MADE THE CODE WORK -->
-  <script src="./static/js/sampleData.js"></script>
   
-  <!-- <script src="./static/js/app.js"></script>  -->
   
-  <!--Temp version to see the desired layout-->
-  <!-- <script src="./static/js/app-manual.js"></script> -->
-  <!-- <script src="./static/js/app-b4-breaking.js"></script> -->
-  <script src="./static/js/init.js"></script> 
+  <script src="./static/js/app.js"></script> 
   
-  <!-- WMB: Commenting out below until it is created. -->
-  <!-- <script src="./static/js/bonus.js"></script> -->
   
 </body>
 
